deployments/wordpress/wordpress-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
  namespace: wordpress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordpress
      tier: frontend
  template:
    metadata:
      labels:
        app: wordpress
        tier: frontend
    spec:
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault

      containers:
        - name: wordpress
          image: docker.io/bitnami/wordpress:latest

          ports:
            - containerPort: 8080

          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]

          volumeMounts:
            - name: wordpress-data
              mountPath: /bitnami/wordpress

      volumes:
        - name: wordpress-data
          persistentVolumeClaim:
            claimName: wordpress-pvc
