deployments/wordpress/mariadb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb
  namespace: wordpress
spec:
  selector:
    app: wordpress
    tier: mariadb
  ports:
  - port: 3306
    targetPort: 3306
