deployments/wordpress/wordpress-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: wordpress
  namespace: wordpress
spec:
#  host: "wordpress.apps.microshift.lab"
  to:
    kind: Service
    name: wordpress
    weight: 100
  port:
    targetPort: 8080
  # No `host` specified: OpenShift/MicroShift will generate a route hostname.
  # To set a fixed FQDN, add `host: your.host.example` and ensure DNS points to the router.
